--- a/meson.build
+++ b/meson.build
@@ -4,47 +4,90 @@ project (
     version: '0.3.1'
 )
 
-vala_args = []
+add_project_arguments([
+        '--vapidir=' + join_paths(meson.source_root(), 'vapi'),
+    ],
+    language: 'vala',
+)
+
+mutter_dep = []
+libmutter_dep = []
+
+vala_flags = []
+c_flags =['-DCLUTTER_ENABLE_COMPOSITOR_API', '-DCLUTTER_ENABLE_EXPERIMENTAL_API',
+		'-DCOGL_ENABLE_EXPERIMENTAL_API', '-DCOGL_ENABLE_EXPERIMENTAL_2_0_API']
 
 mutter328_dep = dependency('libmutter-2', version: ['>= 3.27', '< 3.29'], required: false)
 if mutter328_dep.found()
-    add_project_arguments ([
-            '--vapidir', join_paths (meson.current_source_dir (), 'vapi'),
-            '--pkg', 'libmutter',
-            '--pkg', 'mutter-cogl',
-            '--pkg', 'mutter-clutter'
-        ],
-        language: 'vala'
-    )
-    vala_args += ['--define', 'HAS_MUTTER2']
+    libmutter_dep = dependency('libmutter-2', version: '>= 3.27.92')
+    mutter_dep = [
+        dependency('mutter-cogl-2'), dependency('mutter-cogl-pango-2'),
+        dependency('mutter-cogl-path-2'), dependency('mutter-clutter-2')
+    ]
 endif
 
-mutter330_dep = dependency('libmutter-3', version: ['>= 3.29.2', '< 3.31'], required: false)
+mutter330_dep = dependency('libmutter-3', version: ['>= 3.29.4', '< 3.31'], required: false)
 if mutter330_dep.found()
-    add_project_arguments ([
-            '--vapidir', join_paths (meson.current_source_dir (), 'vapi'),
-            '--pkg', 'libmutter-3',
-            '--pkg', 'mutter-cogl-3',
-            '--pkg', 'mutter-clutter-3'
-        ],
-        language: 'vala'
-    )
-    vala_args += ['--define', 'HAS_MUTTER3']
+    libmutter_dep = dependency('libmutter-3', version: '>= 3.29.4')
+    mutter_dep = [
+        dependency('mutter-cogl-3'), dependency('mutter-cogl-pango-3'),
+        dependency('mutter-cogl-path-3'), dependency('mutter-clutter-3')
+    ]
+    vala_flags = ['--define', 'HAS_MUTTER330']
 endif
 
-if mutter328_dep.found() and mutter330_dep.found()
+mutter332_dep = dependency('libmutter-4', version: ['>= 3.31.2', '< 3.34'], required: false)
+if mutter332_dep.found()
+    libmutter_dep = dependency('libmutter-4', version: '>= 3.31.2')
+    mutter_dep = [
+        dependency('mutter-cogl-4'), dependency('mutter-cogl-pango-4'),
+        dependency('mutter-cogl-path-4'), dependency('mutter-clutter-4')
+    ]
+    vala_flags = ['--define', 'HAS_MUTTER330', '--define', 'HAS_MUTTER332']
+endif
+
+mutter334_dep = dependency('libmutter-5', version: ['>= 3.34', '< 3.35.1'], required: false)
+if mutter334_dep.found()
+    libmutter_dep = dependency('libmutter-5', version: '>= 3.34')
+    mutter_dep = [
+        dependency('mutter-cogl-5'), dependency('mutter-cogl-pango-5'),
+        dependency('mutter-cogl-path-5'), dependency('mutter-clutter-5')
+    ]
+    vala_flags = ['--define', 'HAS_MUTTER330', '--define', 'HAS_MUTTER332', '--define', 'HAS_MUTTER334']
+endif
+
+mutter336_dep = dependency('libmutter-6', version: ['>= 3.35.1', '< 3.38'], required: false)
+if mutter336_dep.found()
+    libmutter_dep = dependency('libmutter-6', version: '>= 3.35.1')
+    mutter_dep = [
+        dependency('mutter-cogl-6'), dependency('mutter-cogl-pango-6'),
+        dependency('mutter-cogl-path-6'), dependency('mutter-clutter-6')
+    ]
+    vala_flags = ['--define', 'HAS_MUTTER330', '--define', 'HAS_MUTTER332', '--define', 'HAS_MUTTER334', '--define', 'HAS_MUTTER336']
+endif
+
+if mutter_dep.length() == 0
     error ('No supported mutter library found!')
 endif
 
-deps = [
-    dependency ('gala'),
-    dependency ('gee-0.8'),
-    dependency ('glib-2.0')
-]
+mutter_typelib_dir = libmutter_dep.get_pkgconfig_variable('typelibdir')
+
+vapigen = find_program('vapigen', required: false)
+if vapigen.found()
+    subdir('vapi')
+endif
 
 lib = shared_library ('gala-layoutpw',
-                    'src/Main.vala',
-                    dependencies: deps,
-                    install: true,
-                    vala_args: vala_args,
-                    install_dir: join_paths (get_option ('libdir'), 'gala', 'plugins'))
+    'src/Main.vala',
+    dependencies: [
+        dependency ('gala'),
+        dependency ('gee-0.8'),
+        dependency ('glib-2.0'),
+        mutter_dep
+    ],
+    install: true,
+    vala_args: vala_flags,
+    c_args: c_flags,
+    install_rpath: mutter_typelib_dir,
+    install_dir: join_paths (get_option ('libdir'), 'gala', 'plugins')
+)
