--- a/debian/control
+++ b/debian/control
@@ -8,10 +8,10 @@ Build-Depends: debhelper-compat (= 13),
                libgala-dev,
                libgee-0.8-dev,
                libglib2.0-dev (>= 2.44),
-               libmutter-6-dev,
+               libmutter-7-dev | libmutter-6-dev,
                meson,
                valac (>= 0.28.0)
-Standards-Version: 4.5.0
+Standards-Version: 4.5.1
 Homepage: https://github.com/Dirli/gala-layoutpw-plugin
 Rules-Requires-Root: no
 
