--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper-compat (= 13),
                libgala-dev,
                libgee-0.8-dev,
                libglib2.0-dev (>= 2.44),
-               libmutter-7-dev | libmutter-6-dev,
+               libmutter-8-dev | libmutter-7-dev | libmutter-6-dev,
                meson,
                valac (>= 0.28.0)
 Standards-Version: 4.5.1
