added libmutter-11 support

--- a/meson.build
+++ b/meson.build
@@ -76,6 +76,17 @@ if mutter42_dep.found()
 	vala_flags = ['--define', 'HAS_MUTTER338', '--define', 'HAS_MUTTER40', '--define', 'HAS_MUTTER41', '--define', 'HAS_MUTTER42']
 endif
 
+mutter43_dep = dependency('libmutter-11', version: ['>= 43', '< 44'], required: false)
+if mutter43_dep.found()
+	libmutter_dep = dependency('libmutter-11', version: '>= 43')
+	mutter_dep = [
+		libmutter_dep,
+		dependency('mutter-cogl-11'), dependency('mutter-cogl-pango-11'),
+		dependency('mutter-clutter-11')
+	]
+	vala_flags = ['--define', 'HAS_MUTTER338', '--define', 'HAS_MUTTER40', '--define', 'HAS_MUTTER41', '--define', 'HAS_MUTTER42', '--define', 'HAS_MUTTER43']
+endif
+
 if mutter_dep.length () == 0
   error ('No supported mutter library found!')
 endif
@@ -90,10 +101,11 @@ endif
 lib = shared_library ('gala-layoutpw',
   'src/Main.vala',
   dependencies: [
-    dependency ('gala', version: '>= 6.0.0'),
-    dependency ('gee-0.8'),
-    dependency ('glib-2.0'),
-    dependency ('gio-unix-2.0'),
+    dependency('gala', version: '>= 6.0.0'),
+    dependency('gee-0.8'),
+    dependency('glib-2.0'),
+    dependency('gio-unix-2.0'),
+    dependency('granite', version: '>= 5.4.0'),
     mutter_dep
   ],
   install: true,
