--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper-compat (= 13),
                libgee-0.8-dev,
                libglib2.0-dev (>= 2.44),
                libgranite-dev (>= 5.4.0),
-               libmutter-11-dev | libmutter-10-dev | libmutter-9-dev | libmutter-8-dev | libmutter-7-dev | libmutter-6-dev,
+               libmutter-12-dev | libmutter-11-dev | libmutter-10-dev,
                meson,
                valac (>= 0.48.0)
 Standards-Version: 4.5.1
